doc generation and tpl override

--- a/Bundle/GendocBundle/Resources/databases/gendoc/_cool_settings.tmp.json
+++ b/Bundle/GendocBundle/Resources/databases/gendoc/_cool_settings.tmp.json
@@ -7,6 +7,15 @@
                     "rawname": "queued_document",
                     "editable": true
                 },
+                "files": {
+                    "category": [
+                        {
+                            "name": "CUSTOM_TEMPLATE",
+                            "maxCount": "1"
+                        }
+                    ],
+                    "attributes": []
+                },
                 "columns": {
                     "queued_document_id": {
                         "attributes": []
