--- a/Bundle/Resources/databases/gendoc/_cool_settings.tmp.json
+++ b/Bundle/Resources/databases/gendoc/_cool_settings.tmp.json
@@ -79,6 +79,6 @@
         "views": []
     },
     "database_name": "cool_db",
-    "namespace": "Eulogix\\Cool\\Bundle\\GendocBundle\\Model",
+    "namespace": "Eulogix\\Cool\\Gendoc\\Bundle\\Model",
     "package": null
 }
